fix: fix pixelperfect shift in main page

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -81,7 +81,7 @@
 
       flex-direction: column;
       align-items: flex-start;
-      gap: 18px;
+      gap: 17px;
     }
 
     .navigation-menu {
