--- a/src/scss/index/page-description.scss
+++ b/src/scss/index/page-description.scss
@@ -26,7 +26,7 @@
     @include mixins.flex(row, space-between, center);
     flex-wrap: wrap;
     flex: 1 1 0;
-    column-gap: 24px;
+    gap: 25px;
 
     max-width: 570px;
 
@@ -37,7 +37,6 @@
 
       min-height: 50px;
       padding-left: 20px;
-      margin-bottom: 1.5rem;
 
       color: inherit;
       border-radius: 3px;
@@ -70,7 +69,7 @@
 @media (width <= 414px) {
   .page-description {
     .content {
-      margin-top: 250px;
+      margin-top: 248px;
     }
   }
 }
