--- a/src/scss/index/page-pricing.scss
+++ b/src/scss/index/page-pricing.scss
@@ -14,7 +14,7 @@
   .pricing-container {
     @include mixins.flex(row, space-between, center);
     flex-wrap: wrap;
-    gap: 50px 48px;
+    gap: 50px;
 
     width: 100%;
   }
@@ -70,5 +70,10 @@
   .footer {
     margin-top: 40px;
     margin-bottom: 0;
+
+    p {
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
   }
 }
